feat: Add music feature implementation
- Update application.cc with music functionality
- Add Vietnamese language support for music features
- Enhance board support for music controls
- Update display modules for music UI
- Add MCP server music commands
- Update component dependencies

--- a/main/assets/locales/vi-VN/language.json
+++ b/main/assets/locales/vi-VN/language.json
@@ -6,7 +6,7 @@
         "WARNING": "Cảnh báo",
         "INFO": "Thông tin",
         "ERROR": "Lỗi",
-        "VERSION": "Phiên bản ",
+        "VERSION": "MusicAI ",
         "LOADING_PROTOCOL": "Đang đăng nhập...",
         "INITIALIZING": "Đang khởi tạo...",
         "PIN_ERROR": "Vui lòng cắm thẻ SIM",
