Fix:correct assets/locales/language.json

--- a/main/assets/locales/ar-SA/language.json
+++ b/main/assets/locales/ar-SA/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "التهيئة...",
         "PIN_ERROR": "يرجى إدخال بطاقة SIM",
         "REG_ERROR": "لا يمكن الوصول إلى الشبكة، يرجى التحقق من حالة بطاقة البيانات",
+        "MODEM_INIT_ERROR": "فشل تهيئة المودم",
         "DETECTING_MODULE": "اكتشاف الوحدة...",
         "REGISTERING_NETWORK": "انتظار الشبكة...",
         "CHECKING_NEW_VERSION": "فحص الإصدار الجديد...",
@@ -20,6 +21,7 @@
         "STANDBY": "في الانتظار",
         "CONNECT_TO": "الاتصال بـ ",
         "CONNECTING": "جاري الاتصال...",
+        "CONNECTION_SUCCESSFUL": "تم الاتصال بنجاح",
         "CONNECTED_TO": "متصل بـ ",
         "LISTENING": "الاستماع...",
         "SPEAKING": "التحدث...",
