--- a/main/assets/locales/bg-BG/language.json
+++ b/main/assets/locales/bg-BG/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Инициализация...",
         "PIN_ERROR": "Моля, поставете SIM карта",
         "REG_ERROR": "Не може да се осъществи достъп до мрежата, моля проверете статуса на SIM картата",
+        "MODEM_INIT_ERROR": "Инициализацията на модема се провали",
         "DETECTING_MODULE": "Откриване на модул...",
         "REGISTERING_NETWORK": "Изчакване на мрежата...",
         "CHECKING_NEW_VERSION": "Проверка за нова версия...",
