--- a/main/assets/locales/cs-CZ/language.json
+++ b/main/assets/locales/cs-CZ/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Inicializace...",
         "PIN_ERROR": "Prosím vložte SIM kartu",
         "REG_ERROR": "Nelze se připojit k síti, zkontrolujte stav datové karty",
+        "MODEM_INIT_ERROR": "Inicializace modemu selhala",
         "DETECTING_MODULE": "Detekce modulu...",
         "REGISTERING_NETWORK": "Čekání na síť...",
         "CHECKING_NEW_VERSION": "Kontrola nové verze...",
@@ -20,6 +21,7 @@
         "STANDBY": "Pohotovost",
         "CONNECT_TO": "Připojit k ",
         "CONNECTING": "Připojování...",
+        "CONNECTION_SUCCESSFUL": "Připojení úspěšné",
         "CONNECTED_TO": "Připojeno k ",
         "LISTENING": "Naslouchání...",
         "SPEAKING": "Mluvení...",
