--- a/main/assets/locales/de-DE/language.json
+++ b/main/assets/locales/de-DE/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Initialisierung...",
         "PIN_ERROR": "Bitte SIM-Karte einlegen",
         "REG_ERROR": "Netzwerkverbindung fehlgeschlagen, bitte Datenkartenstatus prüfen",
+        "MODEM_INIT_ERROR": "Modeminitialisierung fehlgeschlagen",
         "DETECTING_MODULE": "Modul erkennen...",
         "REGISTERING_NETWORK": "Auf Netzwerk warten...",
         "CHECKING_NEW_VERSION": "Neue Version prüfen...",
@@ -20,6 +21,7 @@
         "STANDBY": "Bereitschaft",
         "CONNECT_TO": "Verbinden zu ",
         "CONNECTING": "Verbindung wird hergestellt...",
+        "CONNECTION_SUCCESSFUL": "Verbindung erfolgreich",
         "CONNECTED_TO": "Verbunden mit ",
         "LISTENING": "Zuhören...",
         "SPEAKING": "Sprechen...",
