--- a/main/assets/locales/el-GR/language.json
+++ b/main/assets/locales/el-GR/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Αρχικοποίηση...",
         "PIN_ERROR": "Παρακαλώ εισαγάγετε κάρτα SIM",
         "REG_ERROR": "Αδυναμία πρόσβασης στο δίκτυο, ελέγξτε την κατάσταση της κάρτας SIM",
+        "MODEM_INIT_ERROR": "Η αρχικοποίηση του μόντεμ απέτυχε",
         "DETECTING_MODULE": "Ανίχνευση μονάδας...",
         "REGISTERING_NETWORK": "Αναμονή δικτύου...",
         "CHECKING_NEW_VERSION": "Έλεγχος για νέα έκδοση...",
