--- a/main/assets/locales/es-ES/language.json
+++ b/main/assets/locales/es-ES/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Inicializando...",
         "PIN_ERROR": "Por favor inserte la tarjeta SIM",
         "REG_ERROR": "No se puede acceder a la red, verifique el estado de la tarjeta de datos",
+        "MODEM_INIT_ERROR": "La inicialización del módem falló",
         "DETECTING_MODULE": "Detectando módulo...",
         "REGISTERING_NETWORK": "Esperando red...",
         "CHECKING_NEW_VERSION": "Verificando nueva versión...",
@@ -20,6 +21,7 @@
         "STANDBY": "En espera",
         "CONNECT_TO": "Conectar a ",
         "CONNECTING": "Conectando...",
+        "CONNECTION_SUCCESSFUL": "Conexión exitosa",
         "CONNECTED_TO": "Conectado a ",
         "LISTENING": "Escuchando...",
         "SPEAKING": "Hablando...",
