--- a/main/assets/locales/fa-IR/language.json
+++ b/main/assets/locales/fa-IR/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "در حال راه‌اندازی...",
         "PIN_ERROR": "لطفاً سیم کارت را وارد کنید",
         "REG_ERROR": "عدم دسترسی به شبکه، لطفاً وضعیت سیم کارت را بررسی کنید",
+        "MODEM_INIT_ERROR": "راه‌اندازی مودم ناموفق بود",
         "DETECTING_MODULE": "شناسایی ماژول...",
         "REGISTERING_NETWORK": "در انتظار شبکه...",
         "CHECKING_NEW_VERSION": "بررسی نسخه جدید...",
