--- a/main/assets/locales/fi-FI/language.json
+++ b/main/assets/locales/fi-FI/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Alustetaan...",
         "PIN_ERROR": "Ole hyvä ja aseta SIM-kortti",
         "REG_ERROR": "Ei voi muodostaa yhteyttä verkkoon, tarkista datakortin tila",
+        "MODEM_INIT_ERROR": "Modeemin alustus epäonnistui",
         "DETECTING_MODULE": "Tunnistetaan moduuli...",
         "REGISTERING_NETWORK": "Odotetaan verkkoa...",
         "CHECKING_NEW_VERSION": "Tarkistetaan uutta versiota...",
@@ -20,6 +21,7 @@
         "STANDBY": "Valmiustila",
         "CONNECT_TO": "Yhdistä ",
         "CONNECTING": "Yhdistetään...",
+        "CONNECTION_SUCCESSFUL": "Yhteys muodostettu",
         "CONNECTED_TO": "Yhdistetty ",
         "LISTENING": "Kuunnellaan...",
         "SPEAKING": "Puhutaan...",
