--- a/main/assets/locales/fr-FR/language.json
+++ b/main/assets/locales/fr-FR/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Initialisation...",
         "PIN_ERROR": "Veuillez insérer la carte SIM",
         "REG_ERROR": "Impossible d'accéder au réseau, veuillez vérifier l'état de la carte de données",
+        "MODEM_INIT_ERROR": "Échec de l’initialisation du modem",
         "DETECTING_MODULE": "Détection du module...",
         "REGISTERING_NETWORK": "En attente du réseau...",
         "CHECKING_NEW_VERSION": "Vérification de nouvelle version...",
@@ -20,6 +21,7 @@
         "STANDBY": "En attente",
         "CONNECT_TO": "Se connecter à ",
         "CONNECTING": "Connexion en cours...",
+        "CONNECTION_SUCCESSFUL": "Connexion réussie",
         "CONNECTED_TO": "Connecté à ",
         "LISTENING": "Écoute...",
         "SPEAKING": "Parole...",
