--- a/main/assets/locales/hi-IN/language.json
+++ b/main/assets/locales/hi-IN/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "आरंभीकरण...",
         "PIN_ERROR": "कृपया सिम कार्ड डालें",
         "REG_ERROR": "नेटवर्क तक पहुंच नहीं हो सकती, कृपया डेटा कार्ड स्थिति जांचें",
+        "MODEM_INIT_ERROR": "मोडेम प्रारंभ विफल हुआ",
         "DETECTING_MODULE": "मॉड्यूल का पता लगाया जा रहा है...",
         "REGISTERING_NETWORK": "नेटवर्क की प्रतीक्षा...",
         "CHECKING_NEW_VERSION": "नया संस्करण जाँच रहे हैं...",
@@ -20,6 +21,7 @@
         "STANDBY": "स्टैंडबाय",
         "CONNECT_TO": "कनेक्ट करें ",
         "CONNECTING": "कनेक्ट हो रहे हैं...",
+        "CONNECTION_SUCCESSFUL": "कनेक्शन सफल",
         "CONNECTED_TO": "कनेक्ट हो गए ",
         "LISTENING": "सुन रहे हैं...",
         "SPEAKING": "बोल रहे हैं...",
