--- a/main/assets/locales/id-ID/language.json
+++ b/main/assets/locales/id-ID/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Menginisialisasi...",
         "PIN_ERROR": "Silakan masukkan kartu SIM",
         "REG_ERROR": "Tidak dapat mengakses jaringan, periksa status kartu data",
+        "MODEM_INIT_ERROR": "Inisialisasi modem gagal",
         "DETECTING_MODULE": "Mendeteksi modul...",
         "REGISTERING_NETWORK": "Menunggu jaringan...",
         "CHECKING_NEW_VERSION": "Memeriksa versi baru...",
@@ -20,6 +21,7 @@
         "STANDBY": "Siaga",
         "CONNECT_TO": "Hubungkan ke ",
         "CONNECTING": "Menghubungkan...",
+        "CONNECTION_SUCCESSFUL": "Koneksi berhasil",
         "CONNECTED_TO": "Terhubung ke ",
         "LISTENING": "Mendengarkan...",
         "SPEAKING": "Berbicara...",
