--- a/main/assets/locales/it-IT/language.json
+++ b/main/assets/locales/it-IT/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Inizializzazione...",
         "PIN_ERROR": "Inserire la scheda SIM",
         "REG_ERROR": "Impossibile accedere alla rete, controllare lo stato della scheda dati",
+        "MODEM_INIT_ERROR": "Inizializzazione del modem non riuscita",
         "DETECTING_MODULE": "Rilevamento modulo...",
         "REGISTERING_NETWORK": "In attesa della rete...",
         "CHECKING_NEW_VERSION": "Controllo nuova versione...",
@@ -20,6 +21,7 @@
         "STANDBY": "In attesa",
         "CONNECT_TO": "Connetti a ",
         "CONNECTING": "Connessione...",
+        "CONNECTION_SUCCESSFUL": "Connessione riuscita",
         "CONNECTED_TO": "Connesso a ",
         "LISTENING": "In ascolto...",
         "SPEAKING": "Parlando...",
