--- a/main/assets/locales/ja-JP/language.json
+++ b/main/assets/locales/ja-JP/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "初期化中...",
         "PIN_ERROR": "SIMカードを挿入してください",
         "REG_ERROR": "ネットワークに接続できません。ネットワーク状態を確認してください",
+        "MODEM_INIT_ERROR": "モデムの初期化に失敗しました",
         "DETECTING_MODULE": "モジュールを検出中...",
         "REGISTERING_NETWORK": "ネットワーク接続待機中...",
         "CHECKING_NEW_VERSION": "新しいバージョンを確認中...",
@@ -20,6 +21,7 @@
         "STANDBY": "待機中",
         "CONNECT_TO": "接続先 ",
         "CONNECTING": "接続中...",
+        "CONNECTION_SUCCESSFUL": "接続成功",
         "CONNECTED_TO": "接続完了 ",
         "LISTENING": "リスニング中...",
         "SPEAKING": "話しています...",
