--- a/main/assets/locales/pl-PL/language.json
+++ b/main/assets/locales/pl-PL/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Inicjalizacja...",
         "PIN_ERROR": "Proszę włożyć kartę SIM",
         "REG_ERROR": "Nie można uzyskać dostępu do sieci, sprawdź stan karty danych",
+        "MODEM_INIT_ERROR": "Inicjalizacja modemu nie powiodła się",
         "DETECTING_MODULE": "Wykrywanie modułu...",
         "REGISTERING_NETWORK": "Oczekiwanie na sieć...",
         "CHECKING_NEW_VERSION": "Sprawdzanie nowej wersji...",
@@ -20,6 +21,7 @@
         "STANDBY": "Gotowość",
         "CONNECT_TO": "Połącz z ",
         "CONNECTING": "Łączenie...",
+        "CONNECTION_SUCCESSFUL": "Połączenie udane",
         "CONNECTED_TO": "Połączono z ",
         "LISTENING": "Słuchanie...",
         "SPEAKING": "Mówienie...",
