--- a/main/assets/locales/pt-PT/language.json
+++ b/main/assets/locales/pt-PT/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "A inicializar...",
         "PIN_ERROR": "Por favor insira o cartão SIM",
         "REG_ERROR": "Não é possível aceder à rede, verifique o estado do cartão de dados",
+        "MODEM_INIT_ERROR": "Falha na inicialização do modem",
         "DETECTING_MODULE": "A detectar módulo...",
         "REGISTERING_NETWORK": "À espera da rede...",
         "CHECKING_NEW_VERSION": "A verificar nova versão...",
@@ -20,6 +21,7 @@
         "STANDBY": "Em espera",
         "CONNECT_TO": "Ligar a ",
         "CONNECTING": "A ligar...",
+        "CONNECTION_SUCCESSFUL": "Ligação bem-sucedida",
         "CONNECTED_TO": "Ligado a ",
         "LISTENING": "A escutar...",
         "SPEAKING": "A falar...",
