--- a/main/assets/locales/ro-RO/language.json
+++ b/main/assets/locales/ro-RO/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Se inițializează...",
         "PIN_ERROR": "Vă rugăm să introduceți cardul SIM",
         "REG_ERROR": "Nu se poate accesa rețeaua, verificați starea cardului de date",
+        "MODEM_INIT_ERROR": "Inițializarea modemului a eșuat",
         "DETECTING_MODULE": "Se detectează modulul...",
         "REGISTERING_NETWORK": "Se așteaptă rețeaua...",
         "CHECKING_NEW_VERSION": "Se verifică versiunea nouă...",
@@ -20,6 +21,7 @@
         "STANDBY": "În așteptare",
         "CONNECT_TO": "Conectare la ",
         "CONNECTING": "Se conectează...",
+        "CONNECTION_SUCCESSFUL": "Conectare reușită",
         "CONNECTED_TO": "Conectat la ",
         "LISTENING": "Se ascultă...",
         "SPEAKING": "Se vorbește...",
