--- a/main/assets/locales/ru-RU/language.json
+++ b/main/assets/locales/ru-RU/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Инициализация...",
         "PIN_ERROR": "Пожалуйста, вставьте SIM-карту",
         "REG_ERROR": "Невозможно подключиться к сети, проверьте состояние карты данных",
+        "MODEM_INIT_ERROR": "Инициализация модема не удалась",
         "DETECTING_MODULE": "Обнаружение модуля...",
         "REGISTERING_NETWORK": "Ожидание сети...",
         "CHECKING_NEW_VERSION": "Проверка новой версии...",
@@ -20,6 +21,7 @@
         "STANDBY": "Ожидание",
         "CONNECT_TO": "Подключение к ",
         "CONNECTING": "Подключение...",
+        "CONNECTION_SUCCESSFUL": "Подключение успешно",
         "CONNECTED_TO": "Подключено к ",
         "LISTENING": "Прослушивание...",
         "SPEAKING": "Говорение...",
