--- a/main/assets/locales/sr-RS/language.json
+++ b/main/assets/locales/sr-RS/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Иницијализација...",
         "PIN_ERROR": "Молимо убаците SIM картицу",
         "REG_ERROR": "Није могуће приступити мрежи, проверите статус SIM картице",
+        "MODEM_INIT_ERROR": "Иницијализација модема није успела",
         "DETECTING_MODULE": "Откривање модула...",
         "REGISTERING_NETWORK": "Чекање мреже...",
         "CHECKING_NEW_VERSION": "Провера нове верзије...",
