--- a/main/assets/locales/th-TH/language.json
+++ b/main/assets/locales/th-TH/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "กำลังเริ่มต้นระบบ...",
         "PIN_ERROR": "กรุณาใส่ซิมการ์ด",
         "REG_ERROR": "ไม่สามารถเข้าถึงเครือข่ายได้ กรุณาตรวจสอบสถานะซิมการ์ด",
+        "MODEM_INIT_ERROR": "การเริ่มต้นโมเด็มล้มเหลว",
         "DETECTING_MODULE": "กำลังตรวจจับโมดูล...",
         "REGISTERING_NETWORK": "กำลังรอเครือข่าย...",
         "CHECKING_NEW_VERSION": "กำลังตรวจสอบเวอร์ชันใหม่...",
