--- a/main/assets/locales/tr-TR/language.json
+++ b/main/assets/locales/tr-TR/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Başlatılıyor...",
         "PIN_ERROR": "Lütfen SIM kartı takın",
         "REG_ERROR": "Ağa erişilemiyor, veri kartı durumunu kontrol edin",
+        "MODEM_INIT_ERROR": "Modem başlatma başarısız oldu",
         "DETECTING_MODULE": "Modül algılanıyor...",
         "REGISTERING_NETWORK": "Ağ bekleniyor...",
         "CHECKING_NEW_VERSION": "Yeni sürüm kontrol ediliyor...",
@@ -20,6 +21,7 @@
         "STANDBY": "Bekleme",
         "CONNECT_TO": "Bağlan ",
         "CONNECTING": "Bağlanıyor...",
+        "CONNECTION_SUCCESSFUL": "Bağlantı başarılı",
         "CONNECTED_TO": "Bağlandı ",
         "LISTENING": "Dinleniyor...",
         "SPEAKING": "Konuşuluyor...",
