--- a/main/assets/locales/uk-UA/language.json
+++ b/main/assets/locales/uk-UA/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "Ініціалізація...",
         "PIN_ERROR": "Будь ласка, вставте SIM-карту",
         "REG_ERROR": "Неможливо отримати доступ до мережі, перевірте стан карти даних",
+        "MODEM_INIT_ERROR": "Ініціалізація модема не вдалася",
         "DETECTING_MODULE": "Виявлення модуля...",
         "REGISTERING_NETWORK": "Очікування мережі...",
         "CHECKING_NEW_VERSION": "Перевірка нової версії...",
@@ -20,6 +21,7 @@
         "STANDBY": "Очікування",
         "CONNECT_TO": "Підключитися до ",
         "CONNECTING": "Підключення...",
+        "CONNECTION_SUCCESSFUL": "Підключення успішне",
         "CONNECTED_TO": "Підключено до ",
         "LISTENING": "Прослуховування...",
         "SPEAKING": "Говоріння...",
