--- a/main/assets/locales/zh-TW/language.json
+++ b/main/assets/locales/zh-TW/language.json
@@ -11,6 +11,7 @@
         "INITIALIZING": "正在初始化...",
         "PIN_ERROR": "請插入 SIM 卡",
         "REG_ERROR": "無法接入網絡，請檢查網路狀態",
+        "MODEM_INIT_ERROR": "數據機初始化失敗",
         "DETECTING_MODULE": "檢測模組...",
         "REGISTERING_NETWORK": "等待網絡...",
         "CHECKING_NEW_VERSION": "檢查新版本...",
@@ -20,7 +21,8 @@
         "STANDBY": "待命",
         "CONNECT_TO": "連接 ",
         "CONNECTING": "連接中...",
-        "CONNECTED_TO": "已連接 ",
+        "CONNECTION_SUCCESSFUL": "連接成功",
+        "CONNECTED_TO": "連接至 ",
         "LISTENING": "聆聽中...",
         "SPEAKING": "說話中...",
         "SERVER_NOT_FOUND": "正在尋找可用服務",
