--- a/main/assets/locales/zh-CN/language.json
+++ b/main/assets/locales/zh-CN/language.json
@@ -11,7 +11,7 @@
         "INITIALIZING": "正在初始化...",
         "PIN_ERROR": "请插入 SIM 卡",
         "REG_ERROR": "无法接入网络，请检查流量卡状态",
-        "MODEM_INIT_ERROR": "模组初始化失败",
+        "MODEM_INIT_ERROR": "调制解调器初始化失败",
         "DETECTING_MODULE": "检测模组...",
         "REGISTERING_NETWORK": "等待网络...",
         "CHECKING_NEW_VERSION": "检查新版本...",
@@ -21,7 +21,8 @@
         "STANDBY": "待命",
         "CONNECT_TO": "连接 ",
         "CONNECTING": "连接中...",
-        "CONNECTED_TO": "已连接 ",
+        "CONNECTION_SUCCESSFUL": "连接成功",
+        "CONNECTED_TO": "连接至 ",
         "LISTENING": "聆听中...",
         "SPEAKING": "说话中...",
         "SERVER_NOT_FOUND": "正在寻找可用服务",
